# forty-seven

./: .gitmodules  Makefile  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: main.yml
forty_seven/: __init__.py  _lib.py  _multiphonicsdb.py  _print_sieves.py  test_modules.py
forty_seven.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
forty_seven/builds/score/: score.ly
forty_seven/etc/: notes.md
forty_seven/segments/a/: __metadata__.json  __metadata__.py  definition.py  illustration.ly  music.ily
forty_seven/segments/b/: __metadata__.json  __metadata__.py  definition.py  illustration.ly  music.ily  music.ly
forty_seven/segments/c/: __metadata__.json  __metadata__.py  definition.py  illustration.ly  music.ily
forty_seven/segments/d/: __metadata__.json  __metadata__.py  definition.py  illustration.ly  music.ily  music.ly
forty_seven/stylesheets/: stylesheet.ily
